Add a signature in the default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,15 @@
 <!doctype html>
 <html class="no-js">
+<!--
+             _____   __     ___ __    _________ __
+            /  _  \ |__| __| _/|__|  /   _____//  |______    ____
+           /  /_\  \|  |/ __ | |  |  \_____  \\   __\__  \  /    \
+          /    |    \  / /_/ | |  |  /        \|  |  / __ \|   |  \
+          \____|__  /__\____ | |__| /_______  /|__| (____  /___|  /
+                  \/        \/              \/           \/     \/
+
+                      Copyright (c) 2013-{{ site.time | date: '%Y' }}
+-->
 <head>
   {% include _header.html %}
 </head>
